; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_wlan.c_wlan_disconnect.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_wlan.c_wlan_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@EFAIL = common dso_local global i32 0, align 4
@tSLInformation = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@HCI_CMND_WLAN_DISCONNECT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlan_disconnect() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = load i32, i32* @EFAIL, align 4
  store i32 %4, i32* %1, align 4
  %5 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 0), align 8
  store i32* %5, i32** %2, align 8
  %6 = load i32, i32* @HCI_CMND_WLAN_DISCONNECT, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = call i32 @hci_command_send(i32 %6, i32* %7, i32 0)
  %9 = load i32, i32* @HCI_CMND_WLAN_DISCONNECT, align 4
  %10 = call i32 @SimpleLinkWaitEvent(i32 %9, i32* %1)
  %11 = load i32, i32* %1, align 4
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @hci_command_send(i32, i32*, i32) #1

declare dso_local i32 @SimpleLinkWaitEvent(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
